fixed theme image alignement

--- a/Vintatge.Rabbit/Vintage.Rabbit.Web/Content/less/pages/theme.less
+++ b/Vintatge.Rabbit/Vintage.Rabbit.Web/Content/less/pages/theme.less
@@ -74,11 +74,20 @@
 
         .right {
             width: 230px;
-            height: 313px;
+            height: 154px;
             margin-top: 5px;
             a
                 {
-                display: block; width: 230px; height: 313px; overflow: hidden;
+                display: block; width: 230px; height: 154px; overflow: hidden;
+            }
+
+            &.tall-image
+            {
+            height: 313px;
+            a
+                {
+                height: 313px; 
+            }
             }
         }
     }
